--- a/style.css
+++ b/style.css
@@ -1,20 +1,14 @@
 /* --- CSS RESET --- */
 * {
-margin: 0;
+    margin: 0;
     padding: 0;
     border: 0;
 }
+
 /* --- CSS RESET END --- */
+
 body{
     background-color: #FFEEDF;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    height: 100vh;
-
-
 }
 
 button{
@@ -27,12 +21,10 @@ button{
     color:#FFEEDF;
     font-size: 200px;
     font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-span{
-    height: 265px;
+    position: absolute; /* Taking the element out of the rendering flow */
+    top: 50%; /* Placing the element that much away from the top edge of the viewport */
+    left: 50%; 
+    transform: translate(-50%,-50%); /* Moves away the element that much from itself */
 }
